c1/ProcessHoldings
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:519:12: error: expected expression
*( _OWORD *)&holding[1][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:519:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:520:12: error: expected expression
*( _OWORD *)&holding[1][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:520:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:521:12: error: expected expression
*( _OWORD *)&holding[1][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:521:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:522:12: error: expected expression
*( _OWORD *)&holding[1][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:522:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][0] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:523:12: error: expected expression
*( _OWORD *)&holding[0][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:523:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:524:12: error: expected expression
*( _OWORD *)&holding[0][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:524:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:525:12: error: expected expression
*( _OWORD *)&holding[0][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:525:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:526:12: error: expected expression
*( _OWORD *)&holding[0][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/crazy.c:526:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][0] = 0LL; 
   ^
16 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ProcessHoldings/src/obj/crazy.o] Error 1
